2005-08-26  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* quotes.txt: Several "the last words of"

	* check.sh: License changed to GNU GPL

	* one-time-pass.sh: New file
	* README: one-time-pass.sh added

2005-08-19  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* installkernel, installkernel.8: --log and prefix options added

2005-08-18  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* installkernel, installkernel.8: --config option added

	* malloc.c: Signal handler added

2005-08-13  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* Makefile: targets for install, uninstall added
	target for creating package added
	inteligent X11 include and lib directories finding
	* slack-desc: New file

	* mountiso: New file
	* Makefile, README: mountiso added

	* installkernel: -vv added
	* installkernel.8: -vv added

2005-08-11  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* installkernel.8: New file
	* installkernel: Some parts of usage screen removed (due to
	creation of man page).
	--run-lilo renamed to --update-loader.
	update_ver and update_build functions added.
	* Makefile: Rules for installkernel.8.gz added

	* check.sh: usege renamed to usage

2005-08-08  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* installkernel: Hooks added

	* check-connection.sh: Removed file
	* check.sh: New file
	* README: check-connection.sh replaced with check.sh

	* qutoes.txt: New quotes added

2005-07-25  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* installkernel: New options: --verbose --print-commands, --no-user

	* installkernel: --patch option docummented

2005-07-24  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* installkernel: lockfile added
	now caches signals
	--patch option added

	* installkernel: pretty much rewritten

	* installkernel: --clean option added

	* installkernel: New options: --cd, --nice, --no-nice, --make-dep,
	--image and --modules

	* installkernel: make modules_install is now run as super user.

2005-07-17  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* check-connection.sh: New file